# agentic-team-templates

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  MANIFEST.in  README.md  commitlint.config.js  package-lock.json  package.json  pyproject.toml  release-please-config.json  setup.py
.cursor/rules/: accessibility.md  accessibility.mdc  code-quality.mdc  commit-standards.mdc  common-pitfalls.md  common-pitfalls.mdc  communication.mdc  component-architecture.md  component-architecture.mdc  core-principles-1.md  core-principles.md  core-principles.mdc  data-architecture.mdc  debugging.md  debugging.mdc  definition-of-done.mdc  deployment.md  deployment.mdc  design-principles.mdc  development-workflow.mdc  documentation-adr.md  documentation-adr.mdc  documentation-api-documentation.mdc  documentation-code-comments.mdc  documentation-maintenance.mdc  documentation-overview.mdc  documentation-readme-standards.mdc  security.mdc  (+13 more)
.cursorrules/: commit-standards.md  data-architecture.md  definition-of-done.md  design-principles.md  development-workflow.md  general.md  monitoring.md  performance.md  project-overview.md  project-structure.md  security.md  tech-stack.md
.github/: pr-description-feat-template-rules-mdc.md
.husky/: pre-commit
agentic_team_templates/: __init__.py
docs/: definition-of-done.md  development-workflow.md  security-requirements.md  skill-authoring-guide.md  tech-stack.md  testing-strategy.md
fragments/: citation-standards.md  confidentiality.md  ethical-guidelines.md  output-format.md
scripts/: dogfood.js  validate-rule-sizes.js
shim/: package.json
src/: cli-adapter.test.js  cli-compose.test.js  cli-test.test.js  index.js  index.test.js  lib.rs
(+729 files in other folders)
