[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-team-templates"
version = "0.9.1"
description = "AI coding assistant templates for Cursor IDE, Claude Code, and GitHub Copilot. Pre-configured rules and guidelines."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "David Josef Mendez", email = "me@davidmendez.dev" }]
keywords = ["cursor", "ai", "templates", "coding-assistant", "cursorrules", "claude", "llm"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/djm204/agentic-team-templates"
Repository = "https://github.com/djm204/agentic-team-templates"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentic_team_templates*"]

[tool.setuptools.package-data]
agentic_team_templates = ["templates/**"]
